src/core/Claroline/PluginBundle/Tests/stub/plugin/ValidApplication/Minimal/ValidApplicationMinimal.php
<?php

namespace ValidApplication\Minimal;

use Claroline\PluginBundle\AbstractType\ClarolineApplication;
use Claroline\PluginBundle\Widget\ApplicationLauncher;

class ValidApplicationMinimal extends ClarolineApplication
{
    public function getLaunchers()
    {
        return array(
            new ApplicationLauncher('route_test', 'translation_test', array('ROLE_USER'))
        );
    }
}